matplotlib/vis post

--- a/source/about/index.html
+++ b/source/about/index.html
@@ -8,12 +8,10 @@ footer: false
 
 <p>
 I am a post-doctoral researcher at the University of Washington,
-working with Andrew Connolly in the Astronomy Department's
-<a href="http://ssg.astro.washington.edu">Survey Science Group.</a>
-In January, I will begin an NSF post-doctoral fellowship under
-Magdalena Balazinska in the
+working jointly between the Computer Science department's
 <a href="http://db.cs.washington.edu/">Database Research Group</a>
-in UW Computer Science and Engineering.
+and the Astronomy Department's
+<a href="http://ssg.astro.washington.edu">Survey Science Group.</a>
 </p>
 
 <h3>Astronomy Research</h3>
